<resources>
    <string name="app_name">GPS</string>
    <string name="reset">Reset</string>
    <string name="stopfunction">Stop</string>
    <string name="Latitude">Current Latitude (deg)</string>
    <string name="Longitude">Current Longitude (deg)</string>
    <string name="OriginLat">Latitude Origin (deg)</string>
    <string name="OriginLon">Longitude Origin (deg)</string>
    <string name="Time">Current Time (sec)</string>
    <string name="CurrentX">Calculated X Position (mi)</string>
    <string name="CurrentY">Calculated Y Position (mi)</string>
    <string name="CurrentVX">Calculated Velocity X (mph)</string>
    <string name="CurrentVY">Calculated Velocity Y (mph)</string>
    <string name="CurrentV">Calculated Velocity (mph)</string>
    <string name="Position">Calculated Distance Traveled (mi)</string>
    <string name="GPSSpeed">Speed from GPS (mph)</string>
    <string name="CalcBearing">Calculated Bearing (deg)</string>
    <string name="Bearing">Bearing from GPS (deg)</string>
    <string name="Start">Start</string>
    <string name="elevation">Elevation (ft)</string>
    <string name="Swap">Swap</string>
</resources>
